--- a/rpt_stat/OH010_OutPatientReport.jrxml
+++ b/rpt_stat/OH010_OutPatientReport.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.19.1.final using JasperReports Library version 6.19.1-867c00bf88cd4d784d404379d6c05e1b419e8a4c  -->
+<!-- Created with Jaspersoft Studio version 6.19.0.final using JasperReports Library version 6.19.0-646c68931cebf1a58bc65c4359d1f0ca223c5e94  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="OH010_OutPatientReport" pageWidth="1133" pageHeight="793" orientation="Landscape" columnWidth="1073" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="OH010_OutPatientReport" whenResourceMissingType="Key" uuid="1ae95539-9794-4bfc-954e-7879664f4181">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="344"/>
@@ -306,7 +306,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 		</band>
 	</title>
 	<pageHeader>
-		<band height="28" splitType="Stretch">
+		<band height="22" splitType="Stretch">
 			<staticText>
 				<reportElement key="staticText-3" mode="Opaque" x="0" y="0" width="50" height="22" forecolor="#FFFFFF" backcolor="#FF3333" uuid="ab4b7fa8-1c7d-49b2-934a-5d0e4d4c5689">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -467,7 +467,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$R{DateUppercase}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$R{Date}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement key="staticText-19" mode="Opaque" x="452" y="0" width="79" height="22" forecolor="#FFFFFF" backcolor="#FF3333" uuid="d4efaf93-378e-4e09-bb67-65eea2af1e9f">
@@ -524,9 +524,9 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="23" splitType="Stretch">
+		<band height="22" splitType="Stretch">
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="0" y="-6" width="50" height="22" uuid="3e6868c4-beb2-4fe3-91d7-dd7d540de6a2">
+				<reportElement key="textField" x="0" y="0" width="50" height="22" uuid="3e6868c4-beb2-4fe3-91d7-dd7d540de6a2">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -542,7 +542,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{OPD_PROG_YEAR}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField" x="299" y="-6" width="78" height="22" uuid="1ba73110-ceab-48ff-8a1b-6df84caf9b98">
+				<reportElement key="textField" x="299" y="0" width="78" height="22" uuid="1ba73110-ceab-48ff-8a1b-6df84caf9b98">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 				</reportElement>
@@ -560,7 +560,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{PAT_CITY}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField" x="222" y="-6" width="78" height="22" uuid="f0b16423-0788-4d46-8189-e276350ef8de">
+				<reportElement key="textField" x="222" y="0" width="78" height="22" uuid="f0b16423-0788-4d46-8189-e276350ef8de">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 				</reportElement>
@@ -578,7 +578,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{PAT_ADDR}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="99" y="-6" width="40" height="22" uuid="7a829868-6be2-47d9-b0f6-659b2351ffc7">
+				<reportElement key="textField" x="99" y="0" width="40" height="22" uuid="7a829868-6be2-47d9-b0f6-659b2351ffc7">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -594,7 +594,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{PAT_SEX}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="139" y="-6" width="40" height="22" uuid="d0b3eb2f-fb82-412f-9310-531c3e6ad474">
+				<reportElement key="textField" x="139" y="0" width="40" height="22" uuid="d0b3eb2f-fb82-412f-9310-531c3e6ad474">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -610,7 +610,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{PAT_AGE}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" mode="Opaque" x="531" y="-6" width="42" height="22" backcolor="#FFFFFF" uuid="f6de2d61-897d-4bff-8714-11c6f8d6c833">
+				<reportElement key="textField" mode="Opaque" x="531" y="0" width="42" height="22" backcolor="#FFFFFF" uuid="f6de2d61-897d-4bff-8714-11c6f8d6c833">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -626,7 +626,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{TYPE1}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="573" y="-6" width="170" height="22" uuid="6bc55602-c253-4586-9e44-fc678172d77b">
+				<reportElement key="textField" x="573" y="0" width="170" height="22" uuid="6bc55602-c253-4586-9e44-fc678172d77b">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -645,7 +645,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{DISEASE1}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField-13" x="743" y="-6" width="170" height="22" uuid="c3032ba0-8b21-4952-9c58-0776d9785fdf">
+				<reportElement key="textField-13" x="743" y="0" width="170" height="22" uuid="c3032ba0-8b21-4952-9c58-0776d9785fdf">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -664,7 +664,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{DISEASE2}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField-15" x="913" y="-6" width="160" height="22" uuid="1c4a488c-8aba-4d8d-9144-25cedff35dab">
+				<reportElement key="textField-15" x="913" y="0" width="160" height="22" uuid="1c4a488c-8aba-4d8d-9144-25cedff35dab">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -683,7 +683,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{DISEASE3}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField-17" x="377" y="-6" width="75" height="22" uuid="840274a7-9074-46df-8857-97c3d4a1c4e2">
+				<reportElement key="textField-17" x="377" y="0" width="75" height="22" uuid="840274a7-9074-46df-8857-97c3d4a1c4e2">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -699,7 +699,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{OPD_DATE}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField-18" x="452" y="-6" width="79" height="22" uuid="02fabd5d-3821-446b-9108-3c8d48ea2c2c">
+				<reportElement key="textField-18" x="452" y="0" width="79" height="22" uuid="02fabd5d-3821-446b-9108-3c8d48ea2c2c">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -715,7 +715,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{ATTENDANCE}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField-33" x="50" y="-6" width="49" height="22" uuid="1e22b41e-849d-474d-8f64-701b29f88b71">
+				<reportElement key="textField-33" x="50" y="0" width="49" height="22" uuid="1e22b41e-849d-474d-8f64-701b29f88b71">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -731,7 +731,7 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA[$F{PAT_ID}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="179" y="-6" width="43" height="22" uuid="332b52e1-cc17-47aa-afc7-e4ae20a09721">
+				<reportElement key="textField" x="179" y="0" width="43" height="22" uuid="332b52e1-cc17-47aa-afc7-e4ae20a09721">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -752,15 +752,30 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 		<band splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="27" splitType="Stretch">
+		<band height="30" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<line>
+				<reportElement key="line" mode="Opaque" x="0" y="1" width="1073" height="1" forecolor="#000000" backcolor="#FFFFFF" uuid="7bc31a08-9ad6-4dd5-830f-95baa5bed583"/>
+			</line>
 			<rectangle radius="0">
-				<reportElement key="rectangle-2" mode="Opaque" x="0" y="-3" width="1073" height="23" forecolor="#000099" backcolor="#000099" uuid="13118658-03a0-4331-92e0-50f7d2b2de22">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
+				<reportElement key="rectangle-2" mode="Opaque" x="0" y="5" width="1073" height="20" forecolor="#000099" backcolor="#000099" uuid="6aed718d-5905-4f19-8797-44fcb1f00f3b"/>
 			</rectangle>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement key="textField" mode="Transparent" x="863" y="-3" width="174" height="22" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="b05f132b-e038-46f5-94d6-248ad205109a">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				<reportElement key="textField" x="1" y="6" width="209" height="19" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="837ee107-de29-42a5-8f06-b99bae9ad951"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None">
+					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
+			</textField>
+			<textField pattern="" isBlankWhenNull="false">
+				<reportElement key="textField" mode="Transparent" x="863" y="6" width="174" height="19" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="75e51abe-97f8-4562-943d-db21445c619b">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -774,8 +789,8 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER} + " of "]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report" pattern="" isBlankWhenNull="false">
-				<reportElement key="textField" mode="Transparent" x="1037" y="-3" width="36" height="22" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="ea2bab1f-ea0a-46b6-abba-0faf9ea6ad44">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				<reportElement key="textField" mode="Transparent" x="1037" y="6" width="36" height="19" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="11d2eeed-2959-4368-8b70-a62d71bb03a8">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -788,10 +803,19 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+		</band>
+	</pageFooter>
+	<lastPageFooter>
+		<band height="30" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<line>
+				<reportElement key="line" mode="Opaque" x="0" y="1" width="1073" height="1" forecolor="#000000" backcolor="#FFFFFF" uuid="d470aa3f-aec5-42c5-89bc-7b794a38e756"/>
+			</line>
+			<rectangle radius="0">
+				<reportElement key="rectangle-2" mode="Opaque" x="0" y="5" width="1073" height="20" forecolor="#000099" backcolor="#000099" uuid="7b860761-45f0-4b12-a1e4-591d4af38759"/>
+			</rectangle>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement key="textField" x="1" y="-2" width="209" height="22" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="431138aa-2d2d-4612-bc66-7035c58e81ff">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
+				<reportElement key="textField" x="1" y="6" width="209" height="19" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="b5aa35b8-6aa4-408d-b07b-76db80578f64"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -803,10 +827,37 @@ $F{ATTENDANCE}.equals( "Re" ) ? new Integer(1) : new Integer(0)]]></variableExpr
 				</textElement>
 				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
+			<textField pattern="" isBlankWhenNull="false">
+				<reportElement key="textField" mode="Transparent" x="863" y="6" width="174" height="19" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="8f9cac7e-280a-460a-9b19-e241f03ea949">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Middle" rotation="None">
+					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER} + " of "]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report" pattern="" isBlankWhenNull="false">
+				<reportElement key="textField" mode="Transparent" x="1037" y="6" width="36" height="19" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="198375d0-46cb-429c-bdb3-6b36aaa234b5">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None">
+					<font fontName="DejaVu Sans" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
 		</band>
-	</pageFooter>
-	<lastPageFooter>
-		<band height="27" splitType="Stretch"/>
 	</lastPageFooter>
 	<summary>
 		<band height="122" splitType="Stretch">
